<?xml version="1.0" encoding="utf-8"?>
<!-- 
     Copyright (C) The CyanogenMod Project
     Copyright (C) The OmiROM Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<PreferenceCategory
    	android:title="@string/category_screen_title">
	    <!-- Color tuning -->
	    <org.omnirom.device.ColorTuningPreference 
	        android:key="color_tuning"
	        android:title="@string/color_tuning_title_head"
	        android:summary="@string/color_tuning_summary_head" />
	</PreferenceCategory>

        <PreferenceCategory
            android:title="@string/category_vibration_title">
            <!-- Vibration -->
            <org.omnirom.device.VibrationPreference
                android:key="vibration"
                android:title="@string/vibration_title_head"
                android:summary="@string/vibration_summary_head" />
         </PreferenceCategory>

</PreferenceScreen>
